--- a/hugo.yaml
+++ b/hugo.yaml
@@ -46,7 +46,7 @@ outputs:
 
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
-  description: "Daniel Seichter - https://github.com/dseichter"
+  description: "Daniel Seichter - https://www.dseichter.de"
   author: Daniel Seichter
   # author: ["Me", "You"] # multiple authors
 
