--- a/hugo.yaml
+++ b/hugo.yaml
@@ -37,6 +37,12 @@ languages:
         - name: About me
           url: about/
           weight: 30
+        - name: GitHub
+          url: "https://github.com/dseichter"
+          weight: 40          
+        - name: Buy me a coffee
+          url: "https://www.buymeacoffee.com/dseichter"
+          weight: 50
 
 outputs:
   home:
@@ -48,7 +54,6 @@ params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
   description: "Daniel Seichter - https://www.dseichter.de"
   author: Daniel Seichter
-  # author: ["Me", "You"] # multiple authors
 
   defaultTheme: dark
   disableThemeToggle: true
@@ -73,6 +78,9 @@ params:
     - name: linkedin
       title: LinkedIn
       url: "https://www.linkedin.com/in/dseichter/"
+    - name: buymeacoffee
+      title: Buy me a coffee
+      url: "https://www.buymeacoffee.com/dseichter"
     # - name: KoFi
     #   title: Buy me a Ko-Fi :)
     #   url: "https://ko-fi.com/dseichter"
@@ -90,19 +98,20 @@ params:
   #     apple_touch_icon: "<link / abs url>"
   #     safari_pinned_tab: "<link / abs url>"
 
-  # cover:
-  #     hidden: true # hide everywhere but not in structured data
-  #     hiddenInList: true # hide on list pages and home
-  #     hiddenInSingle: true # hide on single page
+  cover:
+      image: "/images/bitmoji-hi.png"
+      hidden: false # hide everywhere but not in structured data
+      hiddenInList: false # hide on list pages and home
+      hiddenInSingle: false # hide on single page
 
-  # fuseOpts:
-  #     isCaseSensitive: false
-  #     shouldSort: true
-  #     location: 0
-  #     distance: 1000
-  #     threshold: 0.4
-  #     minMatchCharLength: 0
-  #     keys: ["title", "permalink", "summary", "content"]
+  fuseOpts:
+      isCaseSensitive: false
+      shouldSort: true
+      location: 0
+      distance: 1000
+      threshold: 0.4
+      minMatchCharLength: 0
+      keys: ["title", "permalink", "summary", "content"]
 
 markup:
   goldmark:
