--- a/hugo.yaml
+++ b/hugo.yaml
@@ -14,6 +14,15 @@ buildExpired: false
 enableEmoji: true
 pygmentsUseClasses: true
 
+disableKinds:
+  - taxonomy
+  - term
+
+sitemap:
+  changefreq: weekly
+  filename: sitemap.xml
+  priority: 0
+
 minify:
   disableXML: true
   # minifyOutput: true
